fixed shifting chat component

--- a/src/styles/_Chat.css
+++ b/src/styles/_Chat.css
@@ -12,7 +12,7 @@
   justify-content: space-between;
   background: white;
   border-radius: 8px;
-  height: 60%;
+  height: 72%;
   width: 35%;
 }
 
