--- a/src/styles/_InfoBar.css
+++ b/src/styles/_InfoBar.css
@@ -5,7 +5,7 @@
   color: white;
   background: #2979ff;
   border-radius: 4px 4px 0 0;
-  height: 60px;
+  height: 12%;
   width: 100%;
   padding-left: 20px;
 }
